tests/compile-fail/invalid_int.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
 --> $DIR/invalid_int.rs:7:14
  |
7 |     let _x = i + 0; //~ ERROR this operation requires initialized memory
  |              ^^^^^ using uninitialized data, but this operation requires initialized memory
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/invalid_int.rs:7:14

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

